--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Startup</title>
+    <title>SendCargo</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -19,7 +19,7 @@
     <div class="container d-flex align-items-center h-100">
       <div class="row">
         <header class="text-center">
-          <h1 class="text-uppercase" col-12><strong>The biggest startup event of the year</strong></h1>
+          <h1 class="text-uppercase" col-12><strong>Send your Cargo worldwide here</strong></h1>
         </header>
         <div class="buffer col-12"></div>
         <section class="text-center col-12">
